master [add] added new options

--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-chdir = /app
+chdir= /home/healfy/app/birthday
 module = birthday.wsgi
 master = True
 pidfile = /app-master.pid
@@ -9,3 +9,4 @@ processes = 5
 port = 8000
 http = 0.0.0.0:8000
 req-logger = file:./uwsgi-req.log
+socket = /tmp/app.sock
