master [add] pidfile

--- a/conf/uwsgi.ini
+++ b/conf/uwsgi.ini
@@ -2,7 +2,7 @@
 chdir= /home/healfy/app/birthday
 module = birthday.wsgi
 master = True
-pidfile = /app-master.pid
+pidfile = /tmp//app-master.pid
 vacuum = True
 max-requests = 5000
 processes = 5
